--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <ul id="socialLinks">
             <li class="youtube">
                 <a href="https://www.youtube.com/channel/UCtoYmhYj-ciYEwzVnrOajeg" target="_blank">
-                   <img src="/images/youtube.svg" alt="ícone youtube">
+                   <img src="images/youtube.svg" alt="ícone youtube">
                 </a>
             </li>
             <li class="instagram">
                 <a href="https://instagram.com/marcosguilherme158" target="_blank" >
-                   <img src="/images/instagram.svg" alt="ícone instagram">
+                   <img src="images/instagram.svg" alt="ícone instagram">
                 </a>
             </li>
             <li class="facebook">
