--- a/index.html
+++ b/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
+
+<html lang="pt_BR">
+
 <head>
-    <title>Marcos Guilherme - Dowhile 2021</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>Marcos Guilherme - Dowhile 2021</title>
 </head>
 <body>
 
     <main>
+        <div class="loader">
+            <img src="images/animated_rocket.svg" alt="Loaading">
+        </div>
 
-        <div class="container">
+
+        <div class="content">
+            <div class="badge">
+                <img src="images/cordao.png"/>
+            </div>
+            <span>
+                <img src="images/quebra.svg" alt="Selo Rocketseat">
+            </span>
             <div class="avatar">
                 <span>
                     <img src="images/build.svg" alt="Selo Rocketseat">
-
                 </span>
-                <img id="userImage"  alt="Foto Perfil">
+                <img id="userImage" src="" alt="Foto Perfil">
             </div>
 
         <h1 id="userName">
-            Marcos Guilher
+            Marcos Guilherme
         </h1>
         <a id="userLink" 
-            href="" target="_blank">
+            href="https://github.com/marcosguilerm" target="_blank">
             <img src="images/github.svg" alt="ícone github">
             <span id = "userLogin">marcosguilherme158</span>
         </a>
@@ -41,6 +56,11 @@
             <li class="instagram">
                 <a href="https://instagram.com/marcosguilherme158" target="_blank" >
                    <img src="images/instagram.svg" alt="ícone instagram">
+                </a>
+            </li>
+            <li class="linkedin">
+                <a href="https://instagram.com/marcosguilherme158" target="_blank" >
+                   <img src="images/linkedin.svg" alt="ícone linkedin">
                 </a>
             </li>
             <li class="facebook">
